[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-framework-engram"
version = "0.1.1"
description = "Engram (Lumetra) durable memory tools and middleware for the Microsoft Agent Framework."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Lumetra", email = "founders@lumetra.io" },
]
keywords = ["engram", "lumetra", "memory", "agent-framework", "microsoft", "agents", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "agent-framework>=1.5",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://lumetra.io"
Documentation = "https://lumetra.io/docs"
Repository = "https://github.com/lumetra-io/engram-agent-framework"
Issues = "https://github.com/lumetra-io/engram-agent-framework/issues"

[tool.hatch.build.targets.wheel]
packages = ["agent_framework_engram"]
